
	Apparently, FreeBSD has a timer_t already, so I renamed Eterm's.
	Thanks to Carl Lewis <carl@dpiwe.tas.gov.au> for pointing this out.

-------------------------------------------------------------------------------
Thu Aug 19 16:45:36 PDT 1999	Michael Jennings <mej@eterm.org>

	Applied patch from Valdis Kletnieks <valdis.kletnieks@vt.edu> which
	reduces the amount of excess space in menus when using proportional
	fonts.
	
-------------------------------------------------------------------------------
Fri Aug 20 13:23:44 PDT 1999	Michael Jennings <mej@eterm.org>

	Since Mr. Kletnieks reminded me that I never finished it, I finally
	implemented support for right-justified menu text. :-)  Now you'll
	know why some of those menus seemed unnecessarily wide.
	
-------------------------------------------------------------------------------
Fri Aug 20 15:21:51 PDT 1999	Michael Jennings <mej@eterm.org>

	Damn!  No wonder it's been so fscking slow.  Okay, folks, try
	some shaded transparency now.  I'll bet you'll notice a speed
	difference. :-)
	
-------------------------------------------------------------------------------
Fri Aug 20 16:05:59 PDT 1999	Michael Jennings <mej@eterm.org>

	Ugh.  I'd fixed this on my local theme but never on the CVS stuff.
	Sorry, folks.  Thanks to Ashley Penney <ashp@bastard.co.uk> for
	pointing this out.  The F1 key should bring up the menu now, and that
	line should no longer generate a parse error. =)
	
-------------------------------------------------------------------------------
Fri Aug 20 17:28:24 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed a small bug in icon size handling located by Hubert Verstraete
	<hubertv@bigfoot.com>.
	
-------------------------------------------------------------------------------
Mon Aug 23 10:33:20 PDT 1999	Michael Jennings <mej@eterm.org>

	Fixed a bug where Eterm wouldn't start handling events soon enough.
	
-------------------------------------------------------------------------------